Fixed the overlapping copyright text.

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -81,6 +81,7 @@ h1 {
   font-size: 15px;
   position: relative;
   left: 10px;
+  z-index: 1
 }
 
 #copyright {
@@ -89,4 +90,5 @@ h1 {
   text-align: center;
   bottom: 20px;
   margin: auto;
+  z-index: 2
 }
